// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageKit should calculate message 1`] = `
{
  "fields": [
    {
      "decorator": "CorrelationField",
      "enum": null,
      "fallback": [Function],
      "key": "correlation",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "schema": null,
      "type": "uuid",
    },
    {
      "decorator": "DelayField",
      "enum": null,
      "fallback": 0,
      "key": "delay",
      "max": null,
      "min": 0,
      "nullable": false,
      "optional": false,
      "schema": null,
      "type": "integer",
    },
    {
      "decorator": "IdentifierField",
      "enum": null,
      "fallback": [Function],
      "key": "identifier",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "schema": null,
      "type": "uuid",
    },
    {
      "decorator": "MandatoryField",
      "enum": null,
      "fallback": [Function],
      "key": "mandatory",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "schema": null,
      "type": "boolean",
    },
    {
      "decorator": "PersistentField",
      "enum": null,
      "fallback": [Function],
      "key": "persistent",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "schema": null,
      "type": "boolean",
    },
    {
      "decorator": "PriorityField",
      "enum": null,
      "fallback": 1,
      "key": "priority",
      "max": null,
      "min": 0,
      "nullable": false,
      "optional": false,
      "schema": null,
      "type": "integer",
    },
    {
      "decorator": "TimestampField",
      "enum": null,
      "fallback": [Function],
      "key": "timestamp",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "schema": null,
      "type": "date",
    },
    {
      "decorator": "Field",
      "enum": null,
      "fallback": [Function],
      "key": "array",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "schema": null,
      "type": "array",
    },
    {
      "decorator": "Field",
      "enum": null,
      "fallback": [Function],
      "key": "bigint",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "schema": null,
      "type": "bigint",
    },
    {
      "decorator": "Field",
      "enum": null,
      "fallback": [Function],
      "key": "boolean",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "schema": null,
      "type": "boolean",
    },
    {
      "decorator": "Field",
      "enum": null,
      "fallback": [Function],
      "key": "date",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "schema": null,
      "type": "date",
    },
    {
      "decorator": "Field",
      "enum": null,
      "fallback": [Function],
      "key": "email",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "schema": null,
      "type": "email",
    },
    {
      "decorator": "Field",
      "enum": {
        "One": "1",
        "Two": "2",
      },
      "fallback": [Function],
      "key": "enum",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "schema": null,
      "type": "enum",
    },
    {
      "decorator": "Field",
      "enum": null,
      "fallback": [Function],
      "key": "float",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "schema": null,
      "type": "float",
    },
    {
      "decorator": "Field",
      "enum": null,
      "fallback": [Function],
      "key": "integer",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "schema": null,
      "type": "integer",
    },
    {
      "decorator": "Field",
      "enum": null,
      "fallback": [Function],
      "key": "object",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "schema": null,
      "type": "object",
    },
    {
      "decorator": "Field",
      "enum": null,
      "fallback": [Function],
      "key": "string",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "schema": null,
      "type": "string",
    },
    {
      "decorator": "Field",
      "enum": null,
      "fallback": [Function],
      "key": "url",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "schema": null,
      "type": "url",
    },
    {
      "decorator": "Field",
      "enum": null,
      "fallback": [Function],
      "key": "uuid",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "schema": null,
      "type": "uuid",
    },
    {
      "decorator": "Field",
      "enum": null,
      "fallback": null,
      "key": "generated_date",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "schema": null,
      "type": "date",
    },
    {
      "decorator": "Field",
      "enum": null,
      "fallback": null,
      "key": "generated_integer",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "schema": null,
      "type": "integer",
    },
    {
      "decorator": "Field",
      "enum": null,
      "fallback": null,
      "key": "generated_string",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "schema": null,
      "type": "string",
    },
    {
      "decorator": "Field",
      "enum": null,
      "fallback": null,
      "key": "generated_uuid",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "schema": null,
      "type": "uuid",
    },
    {
      "decorator": "Field",
      "enum": null,
      "fallback": null,
      "key": "generated_special",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "schema": null,
      "type": "integer",
    },
    {
      "decorator": "Field",
      "enum": null,
      "fallback": null,
      "key": "generated_length",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "schema": null,
      "type": null,
    },
  ],
  "generated": [
    {
      "key": "generated_date",
      "length": null,
      "max": null,
      "min": null,
      "strategy": "date",
    },
    {
      "key": "generated_integer",
      "length": null,
      "max": null,
      "min": null,
      "strategy": "integer",
    },
    {
      "key": "generated_string",
      "length": null,
      "max": null,
      "min": null,
      "strategy": "string",
    },
    {
      "key": "generated_uuid",
      "length": null,
      "max": null,
      "min": null,
      "strategy": "uuid",
    },
    {
      "key": "generated_special",
      "length": null,
      "max": 4,
      "min": 4,
      "strategy": "integer",
    },
    {
      "key": "generated_length",
      "length": 32,
      "max": null,
      "min": null,
      "strategy": "string",
    },
  ],
  "hooks": [
    {
      "callback": [Function],
      "decorator": "OnValidate",
    },
    {
      "callback": [Function],
      "decorator": "OnPublish",
    },
    {
      "callback": [Function],
      "decorator": "OnConsume",
    },
    {
      "callback": [Function],
      "decorator": "OnCreate",
    },
  ],
  "message": {
    "decorator": "Message",
    "name": null,
    "namespace": null,
    "topic": null,
  },
  "schemas": [
    ZodObject {
      "_cached": null,
      "_def": {
        "catchall": ZodNever {
          "_def": {
            "typeName": "ZodNever",
          },
          "and": [Function],
          "array": [Function],
          "brand": [Function],
          "catch": [Function],
          "default": [Function],
          "describe": [Function],
          "isNullable": [Function],
          "isOptional": [Function],
          "nullable": [Function],
          "nullish": [Function],
          "optional": [Function],
          "or": [Function],
          "parse": [Function],
          "parseAsync": [Function],
          "pipe": [Function],
          "promise": [Function],
          "readonly": [Function],
          "refine": [Function],
          "refinement": [Function],
          "safeParse": [Function],
          "safeParseAsync": [Function],
          "spa": [Function],
          "superRefine": [Function],
          "transform": [Function],
          "~standard": {
            "validate": [Function],
            "vendor": "zod",
            "version": 1,
          },
        },
        "shape": [Function],
        "typeName": "ZodObject",
        "unknownKeys": "passthrough",
      },
      "and": [Function],
      "array": [Function],
      "augment": [Function],
      "brand": [Function],
      "catch": [Function],
      "default": [Function],
      "describe": [Function],
      "isNullable": [Function],
      "isOptional": [Function],
      "nonstrict": [Function],
      "nullable": [Function],
      "nullish": [Function],
      "optional": [Function],
      "or": [Function],
      "parse": [Function],
      "parseAsync": [Function],
      "pipe": [Function],
      "promise": [Function],
      "readonly": [Function],
      "refine": [Function],
      "refinement": [Function],
      "safeParse": [Function],
      "safeParseAsync": [Function],
      "spa": [Function],
      "superRefine": [Function],
      "transform": [Function],
      "~standard": {
        "validate": [Function],
        "vendor": "zod",
        "version": 1,
      },
    },
  ],
}
`;

exports[`MessageKit should resolve OnConsume hooks 1`] = `
TestMessageKit {
  "OnCreate": "OnCreate",
  "OnValidate": "OnValidate",
  "array": [],
  "bigint": 0n,
  "boolean": false,
  "correlation": "c8ff3952-8ba4-51a3-a4d5-2f0726c49524",
  "date": 2024-01-01T08:00:00.000Z,
  "delay": 0,
  "email": "ba@fer.af",
  "enum": "1",
  "float": 0,
  "generated_date": 2024-01-01T08:00:00.000Z,
  "generated_integer": 123456,
  "generated_length": "yP85UoukUaOk1S8HJsSVJA",
  "generated_special": 123456,
  "generated_string": "yP85UoukUaOk1S8HJsSVJA",
  "generated_uuid": "c8ff3952-8ba4-51a3-a4d5-2f0726c49524",
  "identifier": "c8ff3952-8ba4-51a3-a4d5-2f0726c49524",
  "integer": 0,
  "mandatory": false,
  "object": {
    "object": true,
  },
  "persistent": false,
  "priority": 1,
  "string": "string",
  "timestamp": 2024-01-01T08:00:00.000Z,
  "url": "https://example.com",
  "uuid": "f264a693-99a3-5cb0-955c-f70fd90e59d4",
}
`;

exports[`MessageKit should resolve OnCreate hooks 1`] = `
TestMessageKit {
  "OnCreate": "OnCreate",
  "array": [],
  "bigint": 0n,
  "boolean": false,
  "correlation": "c8ff3952-8ba4-51a3-a4d5-2f0726c49524",
  "date": 2024-01-01T08:00:00.000Z,
  "delay": 0,
  "email": "ba@fer.af",
  "enum": "1",
  "float": 0,
  "generated_date": 2024-01-01T08:00:00.000Z,
  "generated_integer": 123456,
  "generated_length": "yP85UoukUaOk1S8HJsSVJA",
  "generated_special": 123456,
  "generated_string": "yP85UoukUaOk1S8HJsSVJA",
  "generated_uuid": "c8ff3952-8ba4-51a3-a4d5-2f0726c49524",
  "identifier": "c8ff3952-8ba4-51a3-a4d5-2f0726c49524",
  "integer": 0,
  "mandatory": false,
  "object": {
    "object": true,
  },
  "persistent": false,
  "priority": 1,
  "string": "string",
  "timestamp": 2024-01-01T08:00:00.000Z,
  "url": "https://example.com",
  "uuid": "f264a693-99a3-5cb0-955c-f70fd90e59d4",
}
`;

exports[`MessageKit should resolve OnPublish hooks 1`] = `
TestMessageKit {
  "OnCreate": "OnCreate",
  "OnValidate": "OnValidate",
  "array": [],
  "bigint": 0n,
  "boolean": false,
  "correlation": "c8ff3952-8ba4-51a3-a4d5-2f0726c49524",
  "date": 2024-01-01T08:00:00.000Z,
  "delay": 0,
  "email": "ba@fer.af",
  "enum": "1",
  "float": 0,
  "generated_date": 2024-01-01T08:00:00.000Z,
  "generated_integer": 123456,
  "generated_length": "yP85UoukUaOk1S8HJsSVJA",
  "generated_special": 123456,
  "generated_string": "yP85UoukUaOk1S8HJsSVJA",
  "generated_uuid": "c8ff3952-8ba4-51a3-a4d5-2f0726c49524",
  "identifier": "c8ff3952-8ba4-51a3-a4d5-2f0726c49524",
  "integer": 0,
  "mandatory": false,
  "object": {
    "object": true,
  },
  "persistent": false,
  "priority": 1,
  "string": "string",
  "timestamp": 2024-01-01T08:00:00.000Z,
  "url": "https://example.com",
  "uuid": "f264a693-99a3-5cb0-955c-f70fd90e59d4",
}
`;

exports[`MessageKit should resolve OnValidate hooks 1`] = `
TestMessageKit {
  "OnCreate": "OnCreate",
  "OnValidate": "OnValidate",
  "array": [],
  "bigint": 0n,
  "boolean": false,
  "correlation": "c8ff3952-8ba4-51a3-a4d5-2f0726c49524",
  "date": 2024-01-01T08:00:00.000Z,
  "delay": 0,
  "email": "ba@fer.af",
  "enum": "1",
  "float": 0,
  "generated_date": 2024-01-01T08:00:00.000Z,
  "generated_integer": 123456,
  "generated_length": "yP85UoukUaOk1S8HJsSVJA",
  "generated_special": 123456,
  "generated_string": "yP85UoukUaOk1S8HJsSVJA",
  "generated_uuid": "c8ff3952-8ba4-51a3-a4d5-2f0726c49524",
  "identifier": "c8ff3952-8ba4-51a3-a4d5-2f0726c49524",
  "integer": 0,
  "mandatory": false,
  "object": {
    "object": true,
  },
  "persistent": false,
  "priority": 1,
  "string": "string",
  "timestamp": 2024-01-01T08:00:00.000Z,
  "url": "https://example.com",
  "uuid": "f264a693-99a3-5cb0-955c-f70fd90e59d4",
}
`;

exports[`MessageKit should resolve copy 1`] = `
TestMessageKit {
  "array": undefined,
  "bigint": undefined,
  "boolean": undefined,
  "correlation": undefined,
  "date": undefined,
  "delay": undefined,
  "email": undefined,
  "enum": undefined,
  "float": undefined,
  "generated_date": undefined,
  "generated_integer": undefined,
  "generated_length": undefined,
  "generated_special": undefined,
  "generated_string": undefined,
  "generated_uuid": undefined,
  "identifier": undefined,
  "integer": undefined,
  "mandatory": undefined,
  "object": undefined,
  "persistent": undefined,
  "priority": undefined,
  "string": undefined,
  "timestamp": undefined,
  "url": undefined,
  "uuid": undefined,
}
`;

exports[`MessageKit should resolve create 1`] = `
TestMessageKit {
  "OnCreate": "OnCreate",
  "array": [],
  "bigint": 0n,
  "boolean": false,
  "correlation": "e8edbe03-f52f-56c6-8d98-82e6961329fe",
  "date": 2024-01-01T08:00:00.000Z,
  "delay": 0,
  "email": "ba@fer.af",
  "enum": "1",
  "float": 0,
  "generated_date": 2024-01-01T08:00:00.000Z,
  "generated_integer": 123456,
  "generated_length": "yP85UoukUaOk1S8HJsSVJA",
  "generated_special": 123456,
  "generated_string": "yP85UoukUaOk1S8HJsSVJA",
  "generated_uuid": "2dc92d72-9ce3-50c7-b982-59022ec393f1",
  "identifier": "0c8c31df-f1cc-5381-97fc-31b3714327de",
  "integer": 0,
  "mandatory": false,
  "object": {
    "object": true,
  },
  "persistent": false,
  "priority": 1,
  "string": "string",
  "timestamp": 2024-01-01T08:00:00.000Z,
  "url": "https://example.com",
  "uuid": "f264a693-99a3-5cb0-955c-f70fd90e59d4",
}
`;

exports[`MessageKit should resolve publish 1`] = `
TestMessageKit {
  "OnCreate": "OnCreate",
  "array": [],
  "bigint": 0n,
  "boolean": false,
  "correlation": "c8ff3952-8ba4-51a3-a4d5-2f0726c49524",
  "date": 2024-01-01T08:00:00.000Z,
  "delay": 0,
  "email": "ba@fer.af",
  "enum": "1",
  "float": 0,
  "generated_date": 2024-01-01T08:00:00.000Z,
  "generated_integer": 123456,
  "generated_length": "yP85UoukUaOk1S8HJsSVJA",
  "generated_special": 123456,
  "generated_string": "yP85UoukUaOk1S8HJsSVJA",
  "generated_uuid": "c8ff3952-8ba4-51a3-a4d5-2f0726c49524",
  "identifier": "c8ff3952-8ba4-51a3-a4d5-2f0726c49524",
  "integer": 0,
  "mandatory": false,
  "object": {
    "object": true,
  },
  "persistent": false,
  "priority": 1,
  "string": "string",
  "timestamp": 2024-01-01T08:00:00.000Z,
  "url": "https://example.com",
  "uuid": "f264a693-99a3-5cb0-955c-f70fd90e59d4",
}
`;

exports[`MessageKit should resolve topic name 1`] = `"message.test-message-kit"`;

exports[`MessageKit should resolve validate 1`] = `undefined`;
